uri param added in safeMintAppNFT

--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "build": "hardhat compile",
     "console": "hardhat console",
     "test": "hardhat test",
-    "deploy:appNFT": "hardhat run scripts/deployAppNFT.js --network polygon",
-    "deployAppProxy": "hardhat run scripts/deployAppProxy.js --network polygon",
-    "verify": "hardhat run scripts/verify.js --network polygon",
-    "verifyAI": "hardhat run scripts/verifyAppImplementation.js --network polygon",
-    "deployDevProxy": "hardhat run scripts/deployDevProxy.js --network polygon",
-    "verifyDI": "hardhat run scripts/verifyDevImplementation.js --network polygon",
-    "deployAppstoreProxy": "hardhat run scripts/deployAppstoreProxy.js --network polygon",
-    "verifyASI": "hardhat run scripts/verifyAppstoreImplementation.js --network polygon",
-    "deployDappNameList": "hardhat run scripts/deployDappNameList.js --network polygon",
-    "verifyDappNameList": "hardhat run scripts/verifyDappNameList.js --network polygon",
-    "addDappNames": "hardhat run scripts/addDappNames.js --network polygon",
-    "upgradeDevProxy": "hardhat run scripts/upgradeDevProxy.js --network polygon",
-    "upgradeAppProxy": "hardhat run scripts/upgradeAppProxy.js --network polygon",
-    "upgradeAppstoreProxy": "hardhat run scripts/upgradeAppstoreProxy.js --network polygon",
-    "replaceTrx": "hardhat run scripts/replaceTransaction.js --network polygon"
+    "deploy:appNFT": "hardhat run scripts/deployAppNFT.js --network",
+    "deployAppProxy": "hardhat run scripts/deployAppProxy.js --network",
+    "verify": "hardhat run scripts/verify.js --network",
+    "verifyAI": "hardhat run scripts/verifyAppImplementation.js --network",
+    "deployDevProxy": "hardhat run scripts/deployDevProxy.js --network",
+    "verifyDI": "hardhat run scripts/verifyDevImplementation.js --network",
+    "deployAppstoreProxy": "hardhat run scripts/deployAppstoreProxy.js --network",
+    "verifyASI": "hardhat run scripts/verifyAppstoreImplementation.js --network",
+    "deployDappNameList": "hardhat run scripts/deployDappNameList.js --network",
+    "verifyDappNameList": "hardhat run scripts/verifyDappNameList.js --network",
+    "addDappNames": "hardhat run scripts/addDappNames.js --network",
+    "upgradeDevProxy": "hardhat run scripts/upgradeDevProxy.js --network",
+    "upgradeAppProxy": "hardhat run scripts/upgradeAppProxy.js --network",
+    "upgradeAppstoreProxy": "hardhat run scripts/upgradeAppstoreProxy.js --network",
+    "replaceTrx": "hardhat run scripts/replaceTransaction.js --network"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
