added dapps names

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3036,6 +3036,10 @@
     "tinder.app",
     "bumble.app",
     "okcupid.app",
-    "hinge.app"
+    "hinge.app",
+    "aurorytactics.app",
+    "sparkball.app",
+    "wildcard.app",
+    "machinearena.app"
   ]
 }
