added 371 dapp ids

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3040,6 +3040,377 @@
     "aurorytactics.app",
     "sparkball.app",
     "wildcard.app",
-    "machinearena.app"
+    "machinearena.app",
+    "alienworlds.app",
+    "farmersworld.app",
+    "upland.app",
+    "wombatdungeonmaster.app",
+    "ninechronicles.app",
+    "defikingdoms.app",
+    "prospectors.app",
+    "thetanarena.app",
+    "thefootballclub.app",
+    "aurory.app",
+    "mechaworld.app",
+    "cosmicclash.app",
+    "karmaversezombie.app",
+    "tezotopia.app",
+    "blockchainbrawlers.app",
+    "highrise.app",
+    "chainmonsters.app",
+    "megacryptopolis.app",
+    "ageoftanks.app",
+    "crabada.app",
+    "cryptantcrab.app",
+    "kawaiiislands.app",
+    "solchicks.app",
+    "titanhunters.app",
+    "9tales.app",
+    "abeatshero.app",
+    "babysharkbubblefongfriends.app",
+    "battleofguardians.app",
+    "blockletegolf.app",
+    "cryptofights.app",
+    "cryptopolis.app",
+    "ev.app",
+    "evolutionland.app",
+    "gunstarmetaverse.app",
+    "magicofuniverse.app",
+    "medashooter.app",
+    "9livesarena.app",
+    "acrosslunacia.app",
+    "afar.app",
+    "ageofdragons.app",
+    "aifafootball.app",
+    "aimbots.app",
+    "alphaleagueracing.app",
+    "angelicgame.app",
+    "angryapearmy.app",
+    "angrymals.app",
+    "anichess.app",
+    "anomura.app",
+    "antebellum.app",
+    "apeiron.app",
+    "apexkingsnftracing.app",
+    "arc8.app",
+    "arkrivals.app",
+    "arker-thelegendofohm.app",
+    "arlequin.app",
+    "armoredkingdom.app",
+    "ascenders.app",
+    "astrospace.app",
+    "autoverse.app",
+    "axieology.app",
+    "axiepop.app",
+    "barbarianmerge.app",
+    "basicbeasts.app",
+    "battlesaga.app",
+    "battlepalooza.app",
+    "battlestargalactica.app",
+    "bitheroesarena.app",
+    "bitbots.app",
+    "bitbrawl.app",
+    "bitstarwar.app",
+    "bitverse.app",
+    "blackshotm.app",
+    "bladesofvalor.app",
+    "blankosblockparty.app",
+    "blockonaire.app",
+    "blockstars.app",
+    "bloodvessels.app",
+    "boomland.app",
+    "bovineverse.app",
+    "btcnations.app",
+    "cantinaroyale.app",
+    "carnagecarnival.app",
+    "castlecrush.app",
+    "catsanddogs.app",
+    "chainmyth.app",
+    "chainofalliance.app",
+    "championsascension.app",
+    "championshunters.app",
+    "chromaticsoulsafkraid.app",
+    "citizenconflictgame.app",
+    "civitas.app",
+    "clashdome.app",
+    "clawstars.app",
+    "comethbattle.app",
+    "conquest-eth.app",
+    "copiumwars.app",
+    "cosmicchamps.app",
+    "cosmicisles.app",
+    "cosmosheroes.app",
+    "cozyversegame.app",
+    "cyballgame.app",
+    "deadrop.app",
+    "deverse.app",
+    "dracoomaster.app",
+    "dustlandrunner.app",
+    "eternaldragons.app",
+    "ethlas-play&earnmetaverse.app",
+    "evaverse.app",
+    "everai.app",
+    "everseed.app",
+    "fableborne.app",
+    "fota.app",
+    "gotchiverse.app",
+    "gunshipbattlecryptoconflict.app",
+    "heroeschained.app",
+    "heroesland.app",
+    "heroesofmavia.app",
+    "honeywood.app",
+    "infinitedrive.app",
+    "infinitefleet.app",
+    "influence.app",
+    "ironpigeons.app",
+    "junglefreaksmotorclub.app",
+    "kingdomkarnage.app",
+    "lastexpedition.app",
+    "legendary-heroesunchained.app",
+    "legendsofaria.app",
+    "mechafightclub.app",
+    "medawars.app",
+    "mekaapes.app",
+    "metagear.app",
+    "metagods.app",
+    "mightnmowem.app",
+    "mightyactionheroes.app",
+    "miniroyalenations.app",
+    "mir4.app",
+    "mobland.app",
+    "moniwar.app",
+    "monkeyleague.app",
+    "mytheria.app",
+    "nflrivals.app",
+    "niftyfootbal.app",
+    "nitronationworldtour.app",
+    "noftgames.app",
+    "novabattles.app",
+    "nyanheroes.app",
+    "oathboundgame.app",
+    "onimansion.app",
+    "ookeenga.app",
+    "outlawtroopers.app",
+    "panzerdogs.app",
+    "pethereum.app",
+    "planetmojo.app",
+    "planetquest.app",
+    "plantsvsundead.app",
+    "polyworld.app",
+    "prizefighter.app",
+    "projectmoon.app",
+    "proofoftreasure.app",
+    "proxi.app",
+    "raidparty.app",
+    "reignofterror.app",
+    "revoland.app",
+    "riseonlineworld.app",
+    "sadu.app",
+    "scratchlords.app",
+    "shrapnel.app",
+    "skatex.app",
+    "skybornelegacy.app",
+    "solitaire-earnrealbitcoin.app",
+    "sorare.app",
+    "spacemisfits.app",
+    "speedstar.app",
+    "staratlas.app",
+    "summonerswar-lostcenturia.app",
+    "taurion.app",
+    "tennischamps.app",
+    "theforgottenrunes.app",
+    "theharvestgame.app",
+    "thelegacynft.app",
+    "themedievalempires-ertugrul.app",
+    "thenemesis.app",
+    "thenemots.app",
+    "timeraiders.app",
+    "undeadblocks.app",
+    "vempire-thebeginning.app",
+    "wavelings.app",
+    "wonderhero.app",
+    "worldeternalonline.app",
+    "worldofdefish.app",
+    "x.app",
+    "zeal.app",
+    "playmining.app",
+    "secondlive.app",
+    "oathofpeak.app",
+    "arc8bygamee.app",
+    "era7-gameoftruth.app",
+    "metaapes.app",
+    "tapfantasy.app",
+    "xworldgames.app",
+    "moboxnftfarmer.app",
+    "trickshotblitz.app",
+    "tinyworld.app",
+    "cpl.app",
+    "bombcrypto2.app",
+    "niftykicksfactory.app",
+    "castlesthenftgame.app",
+    "monsterra.app",
+    "realmnft.app",
+    "solitaireblitz.app",
+    "xpansion.app",
+    "burgercities.app",
+    "animalworld.app",
+    "playzapgames.app",
+    "arenaofglory.app",
+    "nftpanda-worldoffantasy.app",
+    "meeet.app",
+    "momoguro-holoself.app",
+    "playember.app",
+    "ultimatechampions.app",
+    "treasuredao.app",
+    "farmingtales.app",
+    "cryptodynasty-eos.app",
+    "dawnofvictory.app",
+    "miningnetwork.app",
+    "tokenlands.app",
+    "goldmand.app",
+    "jellysquish.app",
+    "sanguozworld.app",
+    "trainofthecentury.app",
+    "carromblitz.app",
+    "officeland.app",
+    "greenrabbitgame.app",
+    "blockchainrpg.app",
+    "riseofelves.app",
+    "midasminer.app",
+    "r-planet.app",
+    "mathwar.app",
+    "outerringmmo.app",
+    "wordsearchblitz.app",
+    "ninneko.app",
+    "honorworld.app",
+    "brainwarp.app",
+    "defira.app",
+    "moonmininghe3.app",
+    "immersys.app",
+    "retawars.app",
+    "novopangeaa.app",
+    "cosmoseleven.app",
+    "pyrosrpsbattle.app",
+    "midgardclash.app",
+    "radaquesttcg.app",
+    "snailtrailgame.app",
+    "faraland.app",
+    "heroicstory.app",
+    "foreverfc.app",
+    "icepoker.app",
+    "mintworld.app",
+    "chibiclash.app",
+    "poolparty.app",
+    "drunkrobots.app",
+    "spacesix.app",
+    "zomon-thepathofheroes.app",
+    "cybercitygame.app",
+    "blockchaincutiesuniverse.app",
+    "aisportscryptodfs.app",
+    "crolonmars.app",
+    "croskullnft.app",
+    "soloongames.app",
+    "thecronosverse.app",
+    "crosmonauts.app",
+    "boredcandycity.app",
+    "tombala.app",
+    "caveworld.app",
+    "revolte.app",
+    "illuvium-play.app",
+    "sunflower-land-play.app",
+    "planetix-missioncontrol.app",
+    "miniroyale.app",
+    "polkastarter-apeiron.app",
+    "pulsar.app",
+    "safrootics.app",
+    "polkastarter-life-beyond.app",
+    "devikins.app",
+    "paradisetycoon.app",
+    "tollanworlds.app",
+    "blastroyale.app",
+    "polkastarter-sipher-odyssey.app",
+    "sidusheroes-play.app",
+    "thebeacon.app",
+    "synergyland.app",
+    "pixelguild.app",
+    "tinycolony.app",
+    "superior.app",
+    "shatterpoint.app",
+    "treasure-bridgeworld.app",
+    "polkastarter-impostors.app",
+    "metaopsgaming.app",
+    "steampowered-store.app",
+    "uldor.app",
+    "br1game.app",
+    "polkastarter-the-treeverse.app",
+    "polkastarter-grit.app",
+    "gmientertainment.app",
+    "sandbox-installers.app",
+    "crosstheages.app",
+    "legendsofvenari.app",
+    "polkastarter-hunters-onchain.app",
+    "polkastarter-edenbrawl.app",
+    "decentraland-play.app",
+    "mypethooligan-rabbithole.app",
+    "leagueofkingdoms-play.app",
+    "polkastarter-alaska-gold-rush.app",
+    "talesofelleria.app",
+    "polkastarter-ember-sword.app",
+    "polkastarter-ai-arena.app",
+    "polkastarter-nyan-heroes.app",
+    "bornless.app",
+    "polkastarter-games.app",
+    "domionline.app",
+    "splinterlands-next.app",
+    "polkastarter-earth-from-another-sun.app",
+    "cryptounicorns-game.app",
+    "phantomgalaxies-lupd.app",
+    "immortal.app",
+    "chibidinos.app",
+    "polkastarter-citizen-conflict.app",
+    "polkastarter-planet-mojo.app",
+    "fightlegends.app",
+    "polkastarter-blocklords.app",
+    "cyball.app",
+    "bcbrawlers.app",
+    "playchronos.app",
+    "metalcore-alpha.app",
+    "skyweaver-play.app",
+    "wagyu.app",
+    "voxietactics.app",
+    "bithotel.app",
+    "cardsofethernity.app",
+    "blankos.app",
+    "kuroro.app",
+    "theharvest.app",
+    "polkastarter-elarium.app",
+    "playrot.app",
+    "aradena.app",
+    "midnightsociety.app",
+    "polkastarter-off-the-grid.app",
+    "myneighboralice.app",
+    "nowayback.app",
+    "rageeffect.app",
+    "polkastarter-lowlife-forms.app",
+    "polkastarter-mummy.app",
+    "polkastarter-mirandus.app",
+    "polkastarter-metastar-strikers.app",
+    "theseeds.app",
+    "wagmigames.app",
+    "smithydao.app",
+    "polkastarter-mobland.app",
+    "polkastarter-shrapnel.app",
+    "tearingspaces.app",
+    "polkastarter-legends-of-elysium.app",
+    "polkastarter-guild-of-guardians.app",
+    "polkastarter-rumble-kong-league.app",
+    "elumia.app",
+    "kompete.app",
+    "cryowar.app",
+    "polkastarter-heroes-of-mavia.app",
+    "kiraverse.app",
+    "theredvillage-tournaments.app",
+    "polkastarter-fableborne.app",
+    "nitroleague.app"
   ]
 }
