--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "upgradeDevProxy": "hardhat run scripts/upgradeDevProxy.js --network",
     "upgradeAppProxy": "hardhat run scripts/upgradeAppProxy.js --network",
     "upgradeAppstoreProxy": "hardhat run scripts/upgradeAppstoreProxy.js --network",
-    "replaceTrx": "hardhat run scripts/replaceTransaction.js --network"
+    "replaceTrx": "hardhat run scripts/replaceTransaction.js --network",
+    "mintUpdate": "hardhat run scripts/bulkMintAndURIupdate.js --network"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
@@ -46,6 +47,8 @@
     "@opengsn/contracts": "^3.0.0-beta.6",
     "@openzeppelin/contracts": "^4.8.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.2",
-    "dotenv": "^16.0.3"
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.3",
+    "readline": "^1.3.0"
   }
 }
