.appStore contract updated & logs added in bulkMint script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "hardhat compile",
     "console": "hardhat console",
     "test": "hardhat test",
+    "slither": "slither .",
+    "slither:AppNFT": "slither contracts/AppNFTUpgradeable.sol --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn'",
+    "slither:AppNFT:human-summary": "slither contracts/AppNFTUpgradeable.sol --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn' --print human-summary",
+    "slither:AppNFT:function-summary": "slither contracts/AppNFTUpgradeable.sol --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn' --print function-summary",
     "deploy:appNFT": "hardhat run scripts/deployAppNFT.js --network",
     "deployAppProxy": "hardhat run scripts/deployAppProxy.js --network",
     "verify": "hardhat run scripts/verify.js --network",
