added new 124 dappId to whitelisted

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3412,6 +3412,130 @@
     "theredvillage-tournaments.app",
     "polkastarter-fableborne.app",
     "nitroleague.app",
-    "rektdogs.app"
+    "rektdogs.app",
+    "moonflow.app",
+    "zkmeta.app",
+    "aquacity.app",
+    "magelabs.app",
+    "galaxiastudios.app",
+    "mythsrpg.app",
+    "daobi.app",
+    "kreatorhood.app",
+    "sx.app",
+    "zepeto.app",
+    "adaninjaz.app",
+    "ewingames.app",
+    "obsworld.app",
+    "thehowdystudios.app",
+    "modernizegames.app",
+    "alphackstudios.app",
+    "era2140.app",
+    "tempuradao.app",
+    "codenamerenegades.app",
+    "arkadiapark.app",
+    "shatteredeon.app",
+    "iglcity.app",
+    "forge.app",
+    "snowcrash.app",
+    "giddy.app",
+    "co-actgames.app",
+    "metaworldentertainment.app",
+    "babysharkgames.app",
+    "katanainu.app",
+    "bcl.app",
+    "hypermint.app",
+    "dubbz.app",
+    "openportalstudios.app",
+    "geneva.app",
+    "plaid.app",
+    "muuscollective.app",
+    "amgistudios.app",
+    "invnt.app",
+    "com-nubank.app",
+    "pixelcraftstudios.app",
+    "monkeyempire.app",
+    "gadget-bot.app",
+    "clubhouse.app",
+    "aethergames.app",
+    "swordsofblood.app",
+    "nhn.app",
+    "co-433.app",
+    "imantisco.app",
+    "neopetsmeta.app",
+    "moongaming.app",
+    "fisglobal.app",
+    "nianticlabs.app",
+    "kakaocorp.app",
+    "littleorbit.app",
+    "tinydigitalfactory.app",
+    "jamcity.app",
+    "stormwarfare.app",
+    "firstlight.app",
+    "block-games.app",
+    "metakingdom.app",
+    "budcreate.app",
+    "co-nexon.app",
+    "bain.app",
+    "square-enix-games.app",
+    "stillfront.app",
+    "neowiz.app",
+    "ryu.app",
+    "arrivant.app",
+    "parallelnft.app",
+    "cyberarts.app",
+    "warnermusic.app",
+    "vhslab.app",
+    "mightybear.app",
+    "mech.app",
+    "fancystudios.app",
+    "playtika.app",
+    "metalordz.app",
+    "unopnd.app",
+    "nwayplay.app",
+    "superlayer.app",
+    "ripio.app",
+    "nemesisdownfall.app",
+    "darewise.app",
+    "recurforever.app",
+    "proofofplay.app",
+    "blowfishstudios.app",
+    "serenade.app",
+    "tiltingpoint.app",
+    "poq.app",
+    "slabs.app",
+    "boombit.app",
+    "scopely.app",
+    "voltgames.app",
+    "medallion.app",
+    "yesports.app",
+    "doublejump.app",
+    "revolvinggames.app",
+    "homagames.app",
+    "pm.app",
+    "opensea-collection-gicko.app",
+    "cloud9.app",
+    "playfulstudios.app",
+    "olivex.app",
+    "turntgaming.app",
+    "payitnow.app",
+    "privy.app",
+    "adrastia.app",
+    "mailchain.app",
+    "polybase.app",
+    "sardine.app",
+    "obvious.app",
+    "kresus.app",
+    "onramp.app",
+    "validationcloud.app",
+    "rly.app",
+    "halliday.app",
+    "pokt.app",
+    "onramper.app",
+    "thegraph-en.app",
+    "haechi.app",
+    "utopialabs.app",
+    "portalhq.app",
+    "helika.app",
+    "airstack.app"
   ]
 }
