--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "hardhat compile",
     "console": "hardhat console",
     "test": "hardhat test",
+    "slither": "slither .",
+    "slither:AppNFT": "slither contracts/AppNFTUpgradeable.sol --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn'",
+    "slither:AppNFT:human-summary": "slither contracts/AppNFTUpgradeable.sol --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn' --print human-summary",
+    "slither:AppNFT:function-summary": "slither contracts/AppNFTUpgradeable.sol --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn' --print function-summary",
     "deploy:appNFT": "hardhat run scripts/deployAppNFT.js --network",
     "deployAppProxy": "hardhat run scripts/deployAppProxy.js --network",
     "verify": "hardhat run scripts/verify.js --network",
@@ -22,7 +26,8 @@
     "upgradeDevProxy": "hardhat run scripts/upgradeDevProxy.js --network",
     "upgradeAppProxy": "hardhat run scripts/upgradeAppProxy.js --network",
     "upgradeAppstoreProxy": "hardhat run scripts/upgradeAppstoreProxy.js --network",
-    "replaceTrx": "hardhat run scripts/replaceTransaction.js --network"
+    "replaceTrx": "hardhat run scripts/replaceTransaction.js --network",
+    "mintUpdate": "hardhat run scripts/bulkMintAndURIupdate.js --network"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
@@ -46,6 +51,8 @@
     "@opengsn/contracts": "^3.0.0-beta.6",
     "@openzeppelin/contracts": "^4.8.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.2",
-    "dotenv": "^16.0.3"
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.3",
+    "readline": "^1.3.0"
   }
 }
