314 dapps ids to whitelisting

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3536,6 +3536,320 @@
     "utopialabs.app",
     "portalhq.app",
     "helika.app",
-    "airstack.app"
+    "airstack.app",
+    "0xmail.app",
+    "fknlegit.app",
+    "a-jam.app",
+    "a4.app",
+    "web.app",
+    "addressinsight.app",
+    "adorableavocados-ismtoys.app",
+    "agorasquare.app",
+    "alltoscan.app",
+    "alluo.app",
+    "alpacafinance.app",
+    "idavoll-alpen.app",
+    "ambo.app",
+    "ancrypto.app",
+    "angelbabyhitsquad-ismtoys.app",
+    "angoname.app",
+    "animemetaverse.app",
+    "anmol.app",
+    "antfarm.app",
+    "apartment-reviwer-app.app",
+    "apesrus-ismtoys.app",
+    "tryappend.app",
+    "abtwallet.app",
+    "argofinance.app",
+    "art-plus-food.app",
+    "super-proxy-finder.app",
+    "artreus.app",
+    "aifrens.app",
+    "atomicwallet.app",
+    "atticc.app",
+    "aureal.app",
+    "getaurox.app",
+    "auth0.app",
+    "auto-recover.app",
+    "avatar-nftmarket.app",
+    "avault.app",
+    "babylonvoice.app",
+    "backer.app",
+    "getboarded.app",
+    "banklessacademy.app",
+    "pullrequest.app",
+    "bc-vault.app",
+    "mascot-gamma.app",
+    "bifrostwallet.app",
+    "bitdegree.app",
+    "bitmama.app",
+    "bladewallet.app",
+    "blite-sage.app",
+    "blockbank.app",
+    "blockbar.app",
+    "blockbooks.app",
+    "blockchain-trace.app",
+    "blockchainr.app",
+    "blockcharts.app",
+    "blockdog.app",
+    "blockroll.app",
+    "blockware.app",
+    "bloctix.app",
+    "ud-boba-bundlr-arweave.app",
+    "bookswap-unstoppable-domains.app",
+    "boredapechessset.app",
+    "brainly-game.app",
+    "breadcrumbs.app",
+    "bridgenetwork.app",
+    "bronzethedoge.app",
+    "bubblestreamr-unstopppable.app",
+    "bug-buzzer-ethonline-yoer.app",
+    "buidl-domains.app",
+    "bob-dao.app",
+    "burn-all.app",
+    "burnerwallet.app",
+    "forj.app",
+    "fourpi.app",
+    "frac-tion.app",
+    "fragmented.app",
+    "friends-show.app",
+    "frogland.app",
+    "frontier.app",
+    "fuelart.app",
+    "fundmymusician.app",
+    "fundapp-denver.app",
+    "gacctoyv1-ismtoys.app",
+    "silly-neumann-630202.app",
+    "gamestop.app",
+    "gather.app",
+    "gemini-custody.app",
+    "genxnfts.app",
+    "gensound.app",
+    "ghostdrive.app",
+    "gigconomy.app",
+    "gigiblock-social-hour-web3.app",
+    "ginoa.app",
+    "giving-funds.app",
+    "glacier.app",
+    "glimpsenft.app",
+    "gnosis-delegator.app",
+    "gdcoin.app",
+    "golemz-ismtoys.app",
+    "gonnamakeit.app",
+    "green-dao-orcin.app",
+    "grovad.app",
+    "guest-book-unstoppable-spiritbro.app",
+    "gummys.app",
+    "buidl-gyftkard.app",
+    "hakka.app",
+    "hashspace.app",
+    "hashcase.app",
+    "hb-wallet.app",
+    "healthgo-dashboard.app",
+    "github-cjustinobi.app",
+    "hector.app",
+    "hefty.app",
+    "hello-web3.app",
+    "heroez.app",
+    "hi.app",
+    "hito.app",
+    "hiveswap.app",
+    "hodlezz.app",
+    "holonym.app",
+    "hyy.app",
+    "icecreamsandwich-ismtoys.app",
+    "icecreamswap.app",
+    "idsea.app",
+    "igain.app",
+    "imaginereplay.app",
+    "imio-zora.app",
+    "imme.app",
+    "impact-chain.app",
+    "indacoin.app",
+    "isocks.app",
+    "invoke.app",
+    "ipfs-blog-engine.app",
+    "isekaiverse.app",
+    "ismtoys.app",
+    "jaypeggers.app",
+    "jonesdao.app",
+    "co-jua.app",
+    "juiceboxfrens-ismtoys.app",
+    "junkyarddogs.app",
+    "karmz-ismtoys.app",
+    "kasuwa-hackfs.app",
+    "kazm.app",
+    "keyring.app",
+    "kimberlite.app",
+    "kintsugi.app",
+    "klever.app",
+    "koii.app",
+    "koinx.app",
+    "krebit.app",
+    "unstoppabledomains-get.app",
+    "kryptomon.app",
+    "kuwallet.app",
+    "getlaika.app",
+    "compassionate-sammet-38ff49.app",
+    "landcoin.app",
+    "ledgermail.app",
+    "lineups.app",
+    "lite-wallet.app",
+    "likemindsfc.app",
+    "localcoinswap.app",
+    "elegant-lolly-a1c0d3.app",
+    "mailchain-app.app",
+    "marry-soul.app",
+    "masterbrews.app",
+    "matic-sender.app",
+    "matrica.app",
+    "meetwithwallet.app",
+    "meme-dao.app",
+    "surge.app",
+    "message-portal.app",
+    "metamirror.app",
+    "metla.app",
+    "plaid-wallet-onboard.app",
+    "plants-and-pillars-unsd.app",
+    "platinumbaynft.app",
+    "polygon-nft-marketplace-umber.app",
+    "polkapet.app",
+    "polygonscan.app",
+    "polymint.app",
+    "polyweb3mail.app",
+    "poodl.app",
+    "ud-hackathon.app",
+    "portify.app",
+    "pro-mint.app",
+    "pruf.app",
+    "pulsar.app",
+    "pumabrowser.app",
+    "purefi.app",
+    "pure-genius-ud.app",
+    "pwrfl.app",
+    "qstn.app",
+    "questbook.app",
+    "questile.app",
+    "quilt.app",
+    "quiverx.app",
+    "rad.app",
+    "railway.app",
+    "nft-generator-web3.app",
+    "rareapepe-ismtoys.app",
+    "raregems.app",
+    "ratemycontract.app",
+    "readyplayer.app",
+    "recoverycryptomanagement.app",
+    "recycle-nft.app",
+    "recyclolottery.app",
+    "rekt-pepe-renaissance.app",
+    "renfter.app",
+    "reputex.app",
+    "requesto.app",
+    "re-sci.app",
+    "resonate.app",
+    "revest.app",
+    "rewardsbunny.app",
+    "theanomaly.app",
+    "rinkeby-punks.app",
+    "ripio-portal.app",
+    "rocketpool.app",
+    "rss3.app",
+    "rucapenlabs.app",
+    "rysk.app",
+    "scalaproject.app",
+    "spheron-scientia-dao-od34eg.app",
+    "secuxtech.app",
+    "web3nftmarket.app",
+    "sendwallet.app",
+    "signaturecollectable.app",
+    "signum.app",
+    "simplemetaverse.app",
+    "skiff.app",
+    "skytale.app",
+    "sloop-green.app",
+    "smartbuilder.app",
+    "smartdeployer.app",
+    "smartpad.app",
+    "smartran.app",
+    "smarttrust.app",
+    "sobr.app",
+    "social-invest-platform.app",
+    "solarbeam.app",
+    "solarflare.app",
+    "sonicswap.app",
+    "sonikchain.app",
+    "sootopia.app",
+    "soy.app",
+    "spacevents.app",
+    "spatium.app",
+    "speak-out.app",
+    "spherium.app",
+    "thesphynx.app",
+    "spool.app",
+    "sport-fundraiser-app.app",
+    "sports-stars-unstoppable-domains.app",
+    "festive-boyd-8f81d4.app",
+    "stakeshares.app",
+    "staxx-ismtoys.app",
+    "stellaswap.app",
+    "storcrypt.app",
+    "straps.app",
+    "joyful-toffee-739f22.app",
+    "uns-strax-bridge.app",
+    "stream-scream.app",
+    "structure.app",
+    "sturdy.app",
+    "ud-login-subscription-hub.app",
+    "snw.app",
+    "swyypepay.app",
+    "tabs3.app",
+    "taurosdao.app",
+    "teenverse-ismtoys.app",
+    "tello-v2.app",
+    "alienboy-ismtoys.app",
+    "thecoinweekly.app",
+    "thedapplist.app",
+    "ownthedoge.app",
+    "thehashavatars-crypto.app",
+    "theunit.app",
+    "thevibes--space-crypto.app",
+    "thirdbnb.app",
+    "thirdgate.app",
+    "thorwallet.app",
+    "timelesswallet.app",
+    "tin.app",
+    "token-creator-five.app",
+    "web3tokeninfo.app",
+    "token-manager-dashboard.app",
+    "tokoin.app",
+    "tollan.app",
+    "torches.app",
+    "towerswap.app",
+    "trackweb3.app",
+    "traddify.app",
+    "travel-chain.app",
+    "tredanet.app",
+    "techtreewiki.app",
+    "tribewallet.app",
+    "tribes.app",
+    "tribunals.app",
+    "tropee.app",
+    "trusteeglobal.app",
+    "truts.app",
+    "tuks.app",
+    "twiggy-minter.app",
+    "leafy-yeot-2ea468.app",
+    "uda-lgorand.app",
+    "udl.app",
+    "celadon-alpaca-84dbbd.app",
+    "udmail.app",
+    "ud-pay.app",
+    "udqrcodegenerator.app",
+    "ud-transactions.app",
+    "udsea.app",
+    "uniblow.app",
+    "unido.app",
+    "unocoin.app"
   ]
 }
