--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3850,6 +3850,7 @@
     "udsea.app",
     "uniblow.app",
     "unido.app",
-    "unocoin.app"
+    "unocoin.app",
+    "web-bifrost-bridge.app"
   ]
 }
