--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -10,9 +10,17 @@ jobs:
         uses: crytic/slither-action@v0.3.0
         id: slither
         with:
-          node-version: 16
+          node-version: 18
           sarif: results.sarif
           fail-on: none
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
+          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
+          POLYGONSCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
+          COINMARKETCAP_API_KEY: ${{ secrets.COINMARKETCAP_API_KEY }}
+          TRUSTED_FORWARDER_ADDRESS: ${{ vars.TRUSTED_FORWARDER_ADDRESS }}
+          TRUSTED_FORWARDER_ADDRESS_POLYGON_MAINNET: ${{ vars.TRUSTED_FORWARDER_ADDRESS_POLYGON_MAINNET }}
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
