--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -13,6 +13,7 @@ jobs:
           node-version: 18
           sarif: results.sarif
           fail-on: none
+          slither-args: --solc-remaps '@openzeppelin=node_modules/@openzeppelin @opengsn=node_modules/@opengsn'
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           ALCHEMY_API_KEY: ${{ secrets.ALCHEMY_API_KEY }}
