--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -3,8 +3,12 @@ on: [push]
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Run Slither
         uses: crytic/slither-action@v0.3.0
