added 241 dappIds to whitelist

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3848,12 +3848,253 @@
     "udqrcodegenerator.app",
     "ud-transactions.app",
     "udsea.app",
-    "uniblow.app",
-    "unido.app",
-    "unocoin.app",
-    "web-bifrost-bridge.app",
-    "brave-browser.app",
-    "etherscan-explorer.app",
-    "phantom-wallet.app"
+  "uniblow.app",
+  "unido.app",
+  "unocoin.app",
+  "web-bifrost-bridge.app",
+  "brave-browser.app",
+  "etherscan-explorer.app",
+  "phantom-wallet.app",
+    "bushidos.app",
+    "butternetwork.app",
+    "buy-me-coffee-with-unstoppable.app",
+    "buymeacrypto.app",
+    "buynothingproject.app",
+    "cakewallet.app",
+    "callso.app",
+    "candyclub.app",
+    "canverse.app",
+    "carry1st.app",
+    "casama.app",
+    "spheron-caze-tfntj.app",
+    "certificatemarkernft.app",
+    "chainex.app",
+    "charmverse.app",
+    "build-hackathon-uns.app",
+    "chubbiverse-ismtoys.app",
+    "claimr.app",
+    "clayfriends-ismtoys.app",
+    "claystack.app",
+    "cloudname.app",
+    "clv.app",
+    "cobo.app",
+    "getcogni.app",
+    "coinage.app",
+    "coinbase-wallet.app",
+    "coinpayment.app",
+    "coinrequest.app",
+    "coinpaprika.app",
+    "coinstats.app",
+    "coinut.app",
+    "collectify.app",
+    "collection-kappa.app",
+    "comunitygarden.app",
+    "concave.app",
+    "getconverse.app",
+    "conv.app",
+    "unstoppabledomains-docs.app",
+    "copiosa.app",
+    "stake-labs.app",
+    "criptdle-git-hackathon-alejozarate.app",
+    "criptologos.app",
+    "cross-layer-2-bridge.app",
+    "crunchnetwork.app",
+    "crunchiedao.app",
+    "cryptodomains24.app",
+    "cryptsocialclub-ismtoys.app",
+    "surge-crypto-in-app.app",
+    "cryptopunk-lake.app",
+    "cryptosmartnow.app",
+    "soots.app",
+    "cuzradio.app",
+    "cyber-graph.app",
+    "dapps-tools.app",
+    "dapp-chat-virid.app",
+    "dappback.app",
+    "dappify.app",
+    "dappsprotect.app",
+    "dashboar.app",
+    "deadheads.app",
+    "deadheads-ismtoys.app",
+    "deadorwounded.app",
+    "debayapp.app",
+    "decentralize-app.app",
+    "decentraland-app.app",
+    "decentralized-library.app",
+    "decentralised-twitter.app",
+    "1deifdonors.app",
+    "defilux.app",
+    "defimarketplace2.app",
+    "defytrends.app",
+    "degenz.app",
+    "dehive-app.app",
+    "demoviesclub.app",
+    "denft.app",
+    "web-depassword.app",
+    "dev-pipes.app",
+    "dianiapp.app",
+    "digitalcouponnft.app",
+    "dinorunnft.app",
+    "dmtp.app",
+    "precious-crumble-f2a5cb.app",
+    "dodao.app",
+    "thedogepound-ismtoys.app",
+    "resilient-pegasus-61c158.app",
+    "dopamineapp.app",
+    "dra.app",
+    "dressx.app",
+    "driipa.app",
+    "dripverse.app",
+    "dsupport.app",
+    "earthwallet.app",
+    "easy-explorer.app",
+    "easy-fundraising.app",
+    "eazi.app",
+    "ecowattx.app",
+    "eddalytics.app",
+    "educationconnec.app",
+    "fleek-on-empty-space.app",
+    "encirca.app",
+    "endofdays.app",
+    "endlessdomains.app",
+    "enkrypt.app",
+    "ennowallet.app",
+    "ethportfolio.app",
+    "ethmail.app",
+    "ethrank.app",
+    "exchangily.app",
+    "eze.app",
+    "fading-hope1-ten.app",
+    "fantom-fwallet-beta.app",
+    "fantom-coin-sender.app",
+    "fantomon.app",
+    "surge-ud-nft.app",
+    "fatcats-ismtoys.app",
+    "filename-space.app",
+    "filecoininterface.app",
+    "finstreet.app",
+    "fishyfam-ismtoys.app",
+    "flashchat.app",
+    "flolio.app",
+    "miniutopia.app",
+    "minimax-app.app",
+    "mintyplex.app",
+    "mobix.app",
+    "museumofcryptoart-app.app",
+    "modishx.app",
+    "moonling-ismtoys.app",
+    "moonstake.app",
+    "moralis.app",
+    "morpher.app",
+    "viamover.app",
+    "multichain-cloud.app",
+    "music3.app",
+    "muxifi.app",
+    "nabu.app",
+    "nebl.app",
+    "neonsundae.app",
+    "nerdwarex.app",
+    "neutra.app",
+    "web-nftbingo1.app",
+    "nft-birthday-cards.app",
+    "fleek-on-nft-community-giveaway.app",
+    "nft-explore.app",
+    "apple.app",
+    "nftpixels.app",
+    "nft-marketplace-temp.app",
+    "viewernfts.app",
+    "nftafrica-glochain.app",
+    "nftea-base.app",
+    "nftrees.app",
+    "nfty-wallet.app",
+    "nifty-sammet-0d2669.app",
+    "nighthawkwallet.app",
+    "nimiq.app",
+    "noox.app",
+    "sweet-cupcake-eb22aa.app",
+    "null-value.app",
+    "oix.app",
+    "okcontract.app",
+    "ceramic-unstoppable.app",
+    "onavax.app",
+    "onekey.app",
+    "onyxdao.app",
+    "openrecon.app",
+    "orchid.app",
+    "orio.app",
+    "overnight.app",
+    "ownbit.app",
+    "oxalus.app",
+    "ox-spence.app",
+    "semkhor.app",
+    "pancakeswap-history.app",
+    "paragraph.app",
+    "meetparcel.app",
+    "partnr.app",
+    "pay.app",
+    "payrue-nft.app",
+    "pazly.app",
+    "pdc.app",
+    "peerspace.app",
+    "perawallet.app",
+    "nftpetgram.app",
+    "pets-found-me.app",
+    "pianomakernft.app",
+    "pinkpaper.app",
+    "solow.app",
+    "piratesnft-ismtoys.app",
+    "pitaka.app",
+    "unreal-market.app",
+    "google-chrome.app",
+    "nftexplorer.app",
+    "unstoppabledomains-extension.app",
+    "unstoppable-portfolio.app",
+    "unstoppable-tool.app",
+    "upnexxt.app",
+    "utorg.app",
+    "vapordex.app",
+    "vapornodes.app",
+    "velocimeter.app",
+    "ve-nft.app",
+    "vergecurrency.app",
+    "versecollect.app",
+    "viewblock.app",
+    "w3commerce.app",
+    "w3link.app",
+    "w3w.app",
+    "waffy.app",
+    "multify.app",
+    "watchers.app",
+    "web3clubs.app",
+    "web3gram.app",
+    "webacy.app",
+    "wema.app",
+    "wfv-ismtoys.app",
+    "whaleswap.app",
+    "whelps.app",
+    "wik-rut-nft.app",
+    "usewinter.app",
+    "wirexapp.app",
+    "getwombat.app",
+    "web-eth-online-moments.app",
+    "xcelpay.app",
+    "xchanted.app",
+    "xmtp.app",
+    "web-hackathon-polygon-encoded.app",
+    "xrptoolkit.app",
+    "xscan.app",
+    "xtoken.app",
+    "xtokenterminal.app",
+    "yester.app",
+    "yodeswap.app",
+    "yooci.app",
+    "yoroi-wallet.app",
+    "you.app",
+    "youngplatform.app",
+    "zelus.app",
+    "zendmart-dapp-prebeta.app",
+    "zillet.app",
+    "zilpay.app",
+    "nebl-orion.app"
   ]
 }
