--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meroku-contracts",
   "version": "1.0.0",
-  "description": "Includes contracts for .app and .dev NFTs",
+  "description": "Includes contracts for .app, .dev & .appStore NFTs",
   "private": true,
   "main": "index.js",
   "scripts": {
@@ -33,7 +33,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-solhint": "^3.0.1",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
@@ -49,10 +49,11 @@
   },
   "dependencies": {
     "@opengsn/contracts": "^3.0.0-beta.6",
-    "@openzeppelin/contracts": "^4.8.3",
-    "@openzeppelin/contracts-upgradeable": "^4.8.2",
+    "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
+    "hardhat-ethers": "^1.0.1",
     "readline": "^1.3.0"
   }
 }
