added ud dapp 50 new DappIds

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -3848,13 +3848,13 @@
     "udqrcodegenerator.app",
     "ud-transactions.app",
     "udsea.app",
-  "uniblow.app",
-  "unido.app",
-  "unocoin.app",
-  "web-bifrost-bridge.app",
-  "brave-browser.app",
-  "etherscan-explorer.app",
-  "phantom-wallet.app",
+    "uniblow.app",
+    "unido.app",
+    "unocoin.app",
+    "web-bifrost-bridge.app",
+    "brave-browser.app",
+    "etherscan-explorer.app",
+    "phantom-wallet.app",
     "bushidos.app",
     "butternetwork.app",
     "buy-me-coffee-with-unstoppable.app",
@@ -4095,6 +4095,56 @@
     "zendmart-dapp-prebeta.app",
     "zillet.app",
     "zilpay.app",
-    "nebl-orion.app"
+    "nebl-orion.app",
+    "2112-run.app",
+    "ariva-game.app",
+    "assetdash-track.app",
+    "bandit-ino.app",
+    "beam-wallet.app",
+    "blockscan-web.app",
+    "glassnode-cryptocurrency.app",
+    "guild-mangment.app",
+    "hashpack-wallet.app",
+    "helloworld-discovery.app",
+    "huddle01-meeting.app",
+    "karatdao-dao.app",
+    "kardiachain-crosschain.app",
+    "koinly-crypto.app",
+    "lizard-exchange.app",
+    "lobstr-wallet.app",
+    "lunarcrush-crypto.app",
+    "mail3-communication.app",
+    "mero-finance.app",
+    "metaverse-domains.app",
+    "zkbridge-nft.app",
+    "relationlabs-one.app",
+    "shapeshift-trading.app",
+    "sologenic-nft.app",
+    "umbra-finance.app",
+    "unit-tools.app",
+    "changelly-finance.app",
+    "cloudflare-web3.app",
+    "coin-wallet.app",
+    "coinomi-wallet.app",
+    "cook-finance.app",
+    "cryptoname-gmo.app",
+    "edge-wallet.app",
+    "eldorado-exchange.app",
+    "elastos-essentials.app",
+    "ethermail-communications.app",
+    "midas-investments.app",
+    "mises-browser.app",
+    "monero-wallet.app",
+    "mycrypto-wallet.app",
+    "next-id.app",
+    "bubble-nft.app",
+    "party-space.app",
+    "xnft-explorer.app",
+    "xumm-wallet.app",
+    "yield-finance.app",
+    "zigzag-exchange.app",
+    "zksync-wallet.app",
+    "co-nftdomains.app",
+    "unilend-testnet.app"
   ]
 }
