added new 57 dapp to whitelisted dapps

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -4148,6 +4148,62 @@
     "unilend-testnet.app",
     "swapper-app.app",
     "bitscrunch.app",
-    "boomland.app"
+    "boomland.app",
+    "1rpc.app",
+    "amberdata.app",
+    "anotherblock.app",
+    "appliedprimate.app",
+    "aragon-app.app",
+    "beam.app",
+    "blackbird.app",
+    "blastapi.app",
+    "blockdaemon.app",
+    "blockscout.app",
+    "bonfire.app",
+    "bridge.app",
+    "cielo.app",
+    "deform.app",
+    "debank.app",
+    "basescan.app",
+    "exodus-app.app",
+    "extrafi.app",
+    "fwb.app",
+    "faraway.app",
+    "flipsidecrypto.app",
+    "frame.app",
+    "game7.app",
+    "gangstaverse.app",
+    "gauntlet.app",
+    "go-go-glover.app",
+    "goldsky.app",
+    "harvest.app",
+    "indelible.app",
+    "iskra.app",
+    "landtorn.app",
+    "layer3.app",
+    "mav.app",
+    "mint.app",
+    "mnemonichq.app",
+    "monkeyleague.app",
+    "moonwell.app",
+    "moso.app",
+    "neptunemutual.app",
+    "zellic.app",
+    "words3.app",
+    "unlock-protocol-staging-app.app",
+    "truflation.app",
+    "tenderly.app",
+    "tally.app",
+    "spearbit.app",
+    "reservoir.app",
+    "redstone-app.app",
+    "prop.app",
+    "pike.app",
+    "panoptic.app",
+    "opencover.app",
+    "onboard.app",
+    "friend.app",
+    "thirdweb-app.app",
+    "nouns-build.app"
   ]
 }
