Added 14 new dapps to registry

--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -4204,6 +4204,20 @@
     "onboard.app",
     "friend.app",
     "thirdweb-app.app",
-    "nouns-build.app"
+    "nouns-build.app",
+    "appreciators-ismtoys.app",
+    "beard-1hbz4yao0-nenezoe.app",
+    "beatstores.app",
+    "trasak-project.app",
+    "decenti-vize.app",
+    "droplinked.app",
+    "gemwallet.app",
+    "lemonade-social.app",
+    "spheron-liquid721-zee7x8.app",
+    "nft-3d-gallery.app",
+    "noname-monster.app",
+    "rarimo.app",
+    "virgonft.app",
+    "dominiosweb3.app"
   ]
 }
