--- a/scripts/reservedDappNames.json
+++ b/scripts/reservedDappNames.json
@@ -4146,6 +4146,78 @@
     "zksync-wallet.app",
     "co-nftdomains.app",
     "unilend-testnet.app",
-    "swapper-app.app"
+    "swapper-app.app",
+    "bitscrunch.app",
+    "boomland.app",
+    "1rpc.app",
+    "amberdata.app",
+    "anotherblock.app",
+    "appliedprimate.app",
+    "aragon-app.app",
+    "beam.app",
+    "blackbird.app",
+    "blastapi.app",
+    "blockdaemon.app",
+    "blockscout.app",
+    "bonfire.app",
+    "bridge.app",
+    "cielo.app",
+    "deform.app",
+    "debank.app",
+    "basescan.app",
+    "exodus-app.app",
+    "extrafi.app",
+    "fwb.app",
+    "faraway.app",
+    "flipsidecrypto.app",
+    "frame.app",
+    "game7.app",
+    "gangstaverse.app",
+    "gauntlet.app",
+    "go-go-glover.app",
+    "goldsky.app",
+    "harvest.app",
+    "indelible.app",
+    "iskra.app",
+    "landtorn.app",
+    "layer3.app",
+    "mav.app",
+    "mint.app",
+    "mnemonichq.app",
+    "monkeyleague.app",
+    "moonwell.app",
+    "moso.app",
+    "neptunemutual.app",
+    "zellic.app",
+    "words3.app",
+    "unlock-protocol-staging-app.app",
+    "truflation.app",
+    "tenderly.app",
+    "tally.app",
+    "spearbit.app",
+    "reservoir.app",
+    "redstone-app.app",
+    "prop.app",
+    "pike.app",
+    "panoptic.app",
+    "opencover.app",
+    "onboard.app",
+    "friend.app",
+    "thirdweb-app.app",
+    "nouns-build.app",
+    "appreciators-ismtoys.app",
+    "beard-1hbz4yao0-nenezoe.app",
+    "beatstores.app",
+    "trasak-project.app",
+    "decenti-vize.app",
+    "droplinked.app",
+    "gemwallet.app",
+    "lemonade-social.app",
+    "spheron-liquid721-zee7x8.app",
+    "nft-3d-gallery.app",
+    "noname-monster.app",
+    "rarimo.app",
+    "virgonft.app",
+    "dominiosweb3.app"
   ]
 }
