--- a/.github/workflows/whitelist.yml
+++ b/.github/workflows/whitelist.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
 
     steps:
       - name: Check out code
