--- a/.github/workflows/whitelist.yml
+++ b/.github/workflows/whitelist.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Determine changes in list
         id: git-diff
         run: |
-          CHANGES=$(git diff --unified=0 HEAD~1 HEAD scripts/list.json)
+          CHANGES=$(git diff --unified=0 staging -- scripts/list.json)
           echo "::set-output name=changes::$CHANGES"
 
       - name: Process Newly Added Names
